gen/IJVMParser.java
// Generated from C:/Users/conso/Desktop/projects/idea/antlr-impl/src/main/antlr4/IJVMParser.g4 by ANTLR 4.13.2

package xyz.atom7.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class IJVMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CONSTANT=1, END_CONSTANT=2, MAIN=3, END_MAIN=4, METHOD=5, END_METHOD=6, 
		VAR=7, END_VAR=8, HALT=9, NOP=10, IADD=11, IAND=12, IOR=13, ISUB=14, POP=15, 
		SWAP=16, DUP=17, ERR=18, IN=19, OUT=20, IRETURN=21, BIPUSH=22, IINC=23, 
		ILOAD=24, ISTORE=25, INVOKEVIRTUAL=26, LDC_W=27, IFLT=28, IFEQ=29, IF_ICMPEQ=30, 
		GOTO=31, LPAREN=32, RPAREN=33, COMMA=34, COLON=35, NUM=36, ID=37, NEWLINE=38, 
		WS=39, COMMENT=40, SEMICOLON_COMMENT=41;
	public static final int
		RULE_program = 0, RULE_constantBlock = 1, RULE_mainBlock = 2, RULE_methodBlock = 3, 
		RULE_varBlock = 4, RULE_constantDecl = 5, RULE_varDecl = 6, RULE_methodDecl = 7, 
		RULE_paramList = 8, RULE_statement = 9, RULE_labelDecl = 10, RULE_instruction = 11, 
		RULE_zeroArgInstr = 12, RULE_byteArgInstr = 13, RULE_varArgInstr = 14, 
		RULE_methodArgInstr = 15, RULE_constantArgInstr = 16, RULE_jumpInstr = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "constantBlock", "mainBlock", "methodBlock", "varBlock", "constantDecl", 
			"varDecl", "methodDecl", "paramList", "statement", "labelDecl", "instruction", 
			"zeroArgInstr", "byteArgInstr", "varArgInstr", "methodArgInstr", "constantArgInstr", 
			"jumpInstr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.constant'", "'.end-constant'", "'.main'", "'.end-main'", "'.method'", 
			"'.end-method'", "'.var'", "'.end-var'", null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'('", "')'", "','", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CONSTANT", "END_CONSTANT", "MAIN", "END_MAIN", "METHOD", "END_METHOD", 
			"VAR", "END_VAR", "HALT", "NOP", "IADD", "IAND", "IOR", "ISUB", "POP", 
			"SWAP", "DUP", "ERR", "IN", "OUT", "IRETURN", "BIPUSH", "IINC", "ILOAD", 
			"ISTORE", "INVOKEVIRTUAL", "LDC_W", "IFLT", "IFEQ", "IF_ICMPEQ", "GOTO", 
			"LPAREN", "RPAREN", "COMMA", "COLON", "NUM", "ID", "NEWLINE", "WS", "COMMENT", 
			"SEMICOLON_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IJVMParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IJVMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public MainBlockContext mainBlock() {
			return getRuleContext(MainBlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(IJVMParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(IJVMParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(IJVMParser.NEWLINE, i);
		}
		public ConstantBlockContext constantBlock() {
			return getRuleContext(ConstantBlockContext.class,0);
		}
		public List<MethodBlockContext> methodBlock() {
			return getRuleContexts(MethodBlockContext.class);
		}
		public MethodBlockContext methodBlock(int i) {
			return getRuleContext(MethodBlockContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IJVMParserVisitor ) return ((IJVMParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(36);
				match(NEWLINE);
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONSTANT) {
				{
				setState(42);
				constantBlock();
				}
			}

			setState(45);
			mainBlock();
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==METHOD) {
				{
				{
				setState(46);
				methodBlock();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(52);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstantBlockContext extends ParserRuleContext {
		public TerminalNode CONSTANT() { return getToken(IJVMParser.CONSTANT, 0); }
		public TerminalNode END_CONSTANT() { return getToken(IJVMParser.END_CONSTANT, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(IJVMParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(IJVMParser.NEWLINE, i);
		}
		public List<ConstantDeclContext> constantDecl() {
			return getRuleContexts(ConstantDeclContext.class);
		}
		public ConstantDeclContext constantDecl(int i) {
			return getRuleContext(ConstantDeclContext.class,i);
		}
		public ConstantBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).enterConstantBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).exitConstantBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IJVMParserVisitor ) return ((IJVMParserVisitor<? extends T>)visitor).visitConstantBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantBlockContext constantBlock() throws RecognitionException {
		ConstantBlockContext _localctx = new ConstantBlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_constantBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(CONSTANT);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID || _la==NEWLINE) {
				{
				{
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(55);
					constantDecl();
					}
				}

				setState(58);
				match(NEWLINE);
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			match(END_CONSTANT);
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(65);
				match(NEWLINE);
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainBlockContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(IJVMParser.MAIN, 0); }
		public TerminalNode END_MAIN() { return getToken(IJVMParser.END_MAIN, 0); }
		public List<VarBlockContext> varBlock() {
			return getRuleContexts(VarBlockContext.class);
		}
		public VarBlockContext varBlock(int i) {
			return getRuleContext(VarBlockContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(IJVMParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(IJVMParser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).enterMainBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).exitMainBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IJVMParserVisitor ) return ((IJVMParserVisitor<? extends T>)visitor).visitMainBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainBlockContext mainBlock() throws RecognitionException {
		MainBlockContext _localctx = new MainBlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mainBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(MAIN);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 416611827328L) != 0)) {
				{
				setState(76);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VAR:
					{
					setState(71);
					varBlock();
					}
					break;
				case HALT:
				case NOP:
				case IADD:
				case IAND:
				case IOR:
				case ISUB:
				case POP:
				case SWAP:
				case DUP:
				case ERR:
				case IN:
				case OUT:
				case IRETURN:
				case BIPUSH:
				case IINC:
				case ILOAD:
				case ISTORE:
				case INVOKEVIRTUAL:
				case LDC_W:
				case IFLT:
				case IFEQ:
				case IF_ICMPEQ:
				case GOTO:
				case ID:
				case NEWLINE:
					{
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 141733920256L) != 0)) {
						{
						setState(72);
						statement();
						}
					}

					setState(75);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			match(END_MAIN);
			setState(83); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(82);
				match(NEWLINE);
				}
				}
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MethodBlockContext extends ParserRuleContext {
		public MethodDeclContext methodDecl() {
			return getRuleContext(MethodDeclContext.class,0);
		}
		public TerminalNode END_METHOD() { return getToken(IJVMParser.END_METHOD, 0); }
		public List<VarBlockContext> varBlock() {
			return getRuleContexts(VarBlockContext.class);
		}
		public VarBlockContext varBlock(int i) {
			return getRuleContext(VarBlockContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(IJVMParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(IJVMParser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MethodBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).enterMethodBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).exitMethodBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IJVMParserVisitor ) return ((IJVMParserVisitor<? extends T>)visitor).visitMethodBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodBlockContext methodBlock() throws RecognitionException {
		MethodBlockContext _localctx = new MethodBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_methodBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			methodDecl();
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 416611827328L) != 0)) {
				{
				setState(93);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VAR:
					{
					setState(88);
					varBlock();
					}
					break;
				case HALT:
				case NOP:
				case IADD:
				case IAND:
				case IOR:
				case ISUB:
				case POP:
				case SWAP:
				case DUP:
				case ERR:
				case IN:
				case OUT:
				case IRETURN:
				case BIPUSH:
				case IINC:
				case ILOAD:
				case ISTORE:
				case INVOKEVIRTUAL:
				case LDC_W:
				case IFLT:
				case IFEQ:
				case IF_ICMPEQ:
				case GOTO:
				case ID:
				case NEWLINE:
					{
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 141733920256L) != 0)) {
						{
						setState(89);
						statement();
						}
					}

					setState(92);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(END_METHOD);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(99);
				match(NEWLINE);
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarBlockContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(IJVMParser.VAR, 0); }
		public TerminalNode END_VAR() { return getToken(IJVMParser.END_VAR, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(IJVMParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(IJVMParser.NEWLINE, i);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public VarBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).enterVarBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).exitVarBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IJVMParserVisitor ) return ((IJVMParserVisitor<? extends T>)visitor).visitVarBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarBlockContext varBlock() throws RecognitionException {
		VarBlockContext _localctx = new VarBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(VAR);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID || _la==NEWLINE) {
				{
				{
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(106);
					varDecl();
					}
				}

				setState(109);
				match(NEWLINE);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			match(END_VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstantDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(IJVMParser.ID, 0); }
		public TerminalNode NUM() { return getToken(IJVMParser.NUM, 0); }
		public ConstantDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).enterConstantDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).exitConstantDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IJVMParserVisitor ) return ((IJVMParserVisitor<? extends T>)visitor).visitConstantDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantDeclContext constantDecl() throws RecognitionException {
		ConstantDeclContext _localctx = new ConstantDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constantDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(ID);
			setState(118);
			match(NUM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(IJVMParser.ID, 0); }
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).exitVarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IJVMParserVisitor ) return ((IJVMParserVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MethodDeclContext extends ParserRuleContext {
		public TerminalNode METHOD() { return getToken(IJVMParser.METHOD, 0); }
		public TerminalNode ID() { return getToken(IJVMParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(IJVMParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(IJVMParser.RPAREN, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public MethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).enterMethodDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).exitMethodDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IJVMParserVisitor ) return ((IJVMParserVisitor<? extends T>)visitor).visitMethodDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclContext methodDecl() throws RecognitionException {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_methodDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(METHOD);
			setState(123);
			match(ID);
			setState(124);
			match(LPAREN);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(125);
				paramList();
				}
			}

			setState(128);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(IJVMParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(IJVMParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(IJVMParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(IJVMParser.COMMA, i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).enterParamList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).exitParamList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IJVMParserVisitor ) return ((IJVMParserVisitor<? extends T>)visitor).visitParamList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_paramList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(ID);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(131);
				match(COMMA);
				setState(132);
				match(ID);
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public LabelDeclContext labelDecl() {
			return getRuleContext(LabelDeclContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IJVMParserVisitor ) return ((IJVMParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_statement);
		try {
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HALT:
			case NOP:
			case IADD:
			case IAND:
			case IOR:
			case ISUB:
			case POP:
			case SWAP:
			case DUP:
			case ERR:
			case IN:
			case OUT:
			case IRETURN:
			case BIPUSH:
			case IINC:
			case ILOAD:
			case ISTORE:
			case INVOKEVIRTUAL:
			case LDC_W:
			case IFLT:
			case IFEQ:
			case IF_ICMPEQ:
			case GOTO:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				instruction();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				labelDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(IJVMParser.ID, 0); }
		public TerminalNode COLON() { return getToken(IJVMParser.COLON, 0); }
		public LabelDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).enterLabelDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IJVMParserListener ) ((IJVMParserListener)listener).exitLabelDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IJVMParserVisitor ) return ((IJVMParserVisitor<? extends T>)visitor).visitLabelDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelDeclContext labelDecl() throws RecognitionException {
		LabelDeclContext _localctx = new LabelDeclContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_labelDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(ID);
			setState(143);
			match(COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
